[gd_scene load_steps=10 format=3 uid="uid://dgn0nmqlckb8m"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_laoy3"]
[ext_resource type="Texture2D" uid="uid://4374yubs11co" path="res://assets/Imanley-Sheet.png" id="2_04v2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6dla"]
size = Vector2(21, 41)

[sub_resource type="Animation" id="Animation_fibpi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_blbcd"]
resource_name = "cross"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_b6in6"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 0]
}

[sub_resource type="Animation" id="Animation_k5yp8"]
resource_name = "jab"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_r1tf6"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nogob"]
_data = {
"RESET": SubResource("Animation_fibpi"),
"cross": SubResource("Animation_blbcd"),
"idle": SubResource("Animation_b6in6"),
"jab": SubResource("Animation_k5yp8"),
"walk": SubResource("Animation_r1tf6")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_laoy3")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_04v2i")
hframes = 4
vframes = 3

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_e6dla")

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerSprite")
libraries = {
"": SubResource("AnimationLibrary_nogob")
}

[connection signal="animation_finished" from="PlayerAnimation" to="." method="_on_player_animation_animation_finished"]
